...
                .background(viewmodel.state.isButtonEnabled ? Color.blue : Color.blue.opacity(0.5))
                .cornerRadius(10)
                .padding(.top, 50)
                .padding(.leading, 16)
                .padding(.trailing, 16)
                .disabled(!viewmodel.state.isButtonEnabled)
                .accessibilityIdentifier("loginButton")
                
                Spacer()
                    
                
            })
        }.showLoading($isLoading) {
...
